--- a/YellowstonePathology/UI/TaskWorkspace.xaml
+++ b/YellowstonePathology/UI/TaskWorkspace.xaml
@@ -72,13 +72,14 @@
                     </ContextMenu>
                 </ListView.ContextMenu>
                 <ListView.View>
-                    <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Case List">
+                    <GridView AllowsColumnReorder="True">
                         <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="85"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=PanelSetName}" Header="Test" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=TargetDescription}" Header="Ordered On" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=OrderDate, Converter={StaticResource MilitaryDateTimeConverter}}" Header="Ordered" Width="110"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=OrderedByInitials}" Header="Ordered By" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=AcknowledgedDate, Converter={StaticResource MilitaryDateTimeConverter}}" Header="Acknowledged" Width="110"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=TrackingNumber}" Header="Tracking" Width="100"/>
                     </GridView>
                 </ListView.View>
             </ListView>
