--- a/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
+++ b/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
@@ -25,10 +25,11 @@
                 <MenuItem Header="Add Timestamp Column to SqlServer" Click="MenuItemAddTimestampColumn_Click" Margin="5"></MenuItem>
                 <MenuItem Header="Add DBTS Attribute to SqlServer" Click="MenuItemAddDBTS_Click" Margin="5"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Move Selected Data ..." Margin="5">
+            <MenuItem Header="Selected Data Action ..." Margin="5">
                 <MenuItem Header="Sync and Load new and altered" Click="MenuItemDailySync_Click" Margin="5"></MenuItem>
-                <MenuItem Header="Load Data" Click="MenuItemLoadData_Click" Margin="5"></MenuItem>
+                <MenuItem Header="Bulk Load Data" Click="MenuItemLoadData_Click" Margin="5"></MenuItem>
                 <MenuItem Header="Synchronize Data" Click="MenuItemSynchronizeData_Click" Margin="5"></MenuItem>
+                <MenuItem Header="Remove MySql not in SqlServer" Click="MenuItemRemoveUnneededData_Click" Margin="5"></MenuItem>
             </MenuItem>
             <MenuItem Header="Compare/Update Selected Data" Click="MenuItemCompareData_Click" Margin="5"></MenuItem>
             <MenuItem Header="Nonpersistent Tables ..." Click="MenuItemNonpersistentTables_Click"></MenuItem>
