--- a/YellowstonePathology/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
+++ b/YellowstonePathology/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
@@ -171,16 +171,6 @@
                 <TextBlock Grid.Column="2" Grid.Row="3" Margin="2,2,2,2" TextAlignment="Right" Text="Final:" FontSize="14" FontWeight="Bold" />
                 <CheckBox Grid.Column="3" Grid.Row="3" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Final}" FontSize="14" IsEnabled="False"/>
 
-                <!--
-                <TextBlock Grid.Column="2" Grid.Row="4" Margin="10,5,2,2" TextAlignment="Right" Text="Assigned To:" FontSize="14" FontWeight="Bold" />
-                <ComboBox Grid.Column="3" Grid.Row="4" Margin="2,2,2,2" ItemsSource="{Binding Path=SystemUserCollection}" HorizontalAlignment="Stretch"
-								  SelectedValuePath="UserId"
-								  DisplayMemberPath="DisplayName"
-								  SelectedValue="{Binding Path=PanelSetOrder.AssignedToId}">
-
-                </ComboBox>
-                -->
-                
                 <TextBlock Grid.Column="2" Grid.Row="4" Margin="10,2,2,5" TextAlignment="Right" Text="Final Date:" FontSize="14" FontWeight="Bold" />
                 <TextBlock Grid.Column="3" Grid.Row="4" Margin="2,2,2,5" TextAlignment="Left" Text="{Binding Path=PanelSetOrder.FinalTime}" FontSize="14" IsEnabled="False"/>
                 
@@ -188,6 +178,11 @@
                 
                 <ListView Name="ListViewTestOrderReportDistribution" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="8" 
                         ItemsSource="{Binding Path=PanelSetOrder.TestOrderReportDistributionCollection}" Margin="2,2,2,2">
+                    <ListView.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Header="Convert To Fax" Click="MenuItemConvertToFax_Click"></MenuItem>
+                        </ContextMenu>
+                    </ListView.ContextMenu>
                     <ListView.View>
                         <GridView>
                             <GridViewColumn DisplayMemberBinding="{Binding Path=DateAdded, StringFormat=MM/dd/yyyy HH:mm}" Header="Date Added" Width="150"/>
