--- a/YellowstonePathology/UI/Test/TCellNKProfileResultPage.xaml
+++ b/YellowstonePathology/UI/Test/TCellNKProfileResultPage.xaml
@@ -80,15 +80,65 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">WBC:</TextBlock>
                     <TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.WBC}" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="1" FontWeight="Bold">Lympocyte Percentage:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=PanelSetOrder.LymphocytePercentage, Converter={StaticResource NullableDoubleConverter}}" />
+                    <TextBlock Grid.Column="0" Grid.Row="1" FontWeight="Bold" Margin="2,2,2,2">Lympocyte Percentage:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.LymphocytePercentage, Converter={StaticResource NullableDoubleConverter}}" />
 
-                    <Grid Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2">
+                    <Grid Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Marker:</TextBlock>
+                        <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Left">%</TextBlock>
+
+                        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD3:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD3Percent, Converter={StaticResource NullableDoubleConverter}}" Width="80" />
+                        <TextBlock Grid.Column="2" Grid.Row="1" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
+
+                        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD4:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD4Percent, Converter={StaticResource NullableDoubleConverter}}" Width="80" />
+                        <TextBlock Grid.Column="2" Grid.Row="2" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
+
+                        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD8:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD8Percent, Converter={StaticResource NullableDoubleConverter}}" Width="80"/>
+                        <TextBlock Grid.Column="2" Grid.Row="3" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD16:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD16Percent, Converter={StaticResource NullableDoubleConverter}}" Width="80"/>
+                        <TextBlock Grid.Column="2" Grid.Row="4" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD19:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD19Percent, Converter={StaticResource NullableDoubleConverter}}" Width="80"/>
+                        <TextBlock Grid.Column="2" Grid.Row="5" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD45:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD45Percent, Converter={StaticResource NullableDoubleConverter}}" Width="80"/>
+                        <TextBlock Grid.Column="2" Grid.Row="6" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD56:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD56Percent, Converter={StaticResource NullableDoubleConverter}}" Width="80"/>
+                        <TextBlock Grid.Column="2" Grid.Row="7" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
+                    </Grid>
+
+                    <Grid Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="5,5,5,5">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -106,48 +156,48 @@
 
                         <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Cell Type:</TextBlock>
                         <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left" Grid.ColumnSpan="2">% of lymphocytes</TextBlock>
-                        <TextBlock Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Absolute Count</TextBlock>
+                        <TextBlock Grid.Column="3" Grid.Row="0" Margin="10,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Absolute Count</TextBlock>
 
                         <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD3 T-cells:</TextBlock>
                         <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD3TPercent, Converter={StaticResource NullableDoubleConverter}}" />
                         <TextBlock Grid.Column="2" Grid.Row="1" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
-                        <TextBlock Grid.Column="3" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD3TCount}" />
+                        <TextBlock Grid.Column="3" Grid.Row="1" Margin="10,2,2,2" Text="{Binding Path=PanelSetOrder.CD3TCount}" />
 
                         <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD4 T-helper:</TextBlock>
                         <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD4TPercent, Converter={StaticResource NullableDoubleConverter}}" />
                         <TextBlock Grid.Column="2" Grid.Row="2" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
-                        <TextBlock Grid.Column="3" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD4TCount}" />
+                        <TextBlock Grid.Column="3" Grid.Row="2" Margin="10,2,2,2" Text="{Binding Path=PanelSetOrder.CD4TCount}" />
 
                         <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD8 T-suppressor:</TextBlock>
                         <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD8TPercent, Converter={StaticResource NullableDoubleConverter}}" />
                         <TextBlock Grid.Column="2" Grid.Row="3" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
-                        <TextBlock Grid.Column="3" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD8TCount}" />
+                        <TextBlock Grid.Column="3" Grid.Row="3" Margin="10,2,2,2" Text="{Binding Path=PanelSetOrder.CD8TCount}" />
 
                         <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD16 CD56 NK cells:</TextBlock>
                         <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,0,2" Text="{Binding Path=PanelSetOrder.CD16CD56NKPercent, Converter={StaticResource NullableDoubleConverter}}" />
                         <TextBlock Grid.Column="2" Grid.Row="4" Margin="0,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">%</TextBlock>
-                        <TextBlock Grid.Column="3" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD16CD56NKCount}" />
+                        <TextBlock Grid.Column="3" Grid.Row="4" Margin="10,2,2,2" Text="{Binding Path=PanelSetOrder.CD16CD56NKCount}" />
 
                         <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD4/CD8 ratio:</TextBlock>
-                        <TextBlock Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.CD4CD8Ratio}" />
+                        <TextBlock Grid.Column="1" Grid.Row="5" Margin="10,2,2,2" Text="{Binding Path=PanelSetOrder.CD4CD8Ratio}" />
                     </Grid>
 
-                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Method:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True"/>
+                    <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Method:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True"/>
 
-                    <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">References:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True" />
+                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">References:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">ASR Comment:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ASRComment}" TextWrapping="Wrap" AcceptsReturn="True"/>
+                    <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">ASR Comment:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ASRComment}" TextWrapping="Wrap" AcceptsReturn="True"/>
 
-                    <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="9" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="10" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
 
-                    <TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="10" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="11" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
 
-                    <Grid Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2">
+                    <Grid Grid.Column="0" Grid.Row="12" Grid.ColumnSpan="2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"></ColumnDefinition>
                             <ColumnDefinition Width="*"></ColumnDefinition>
