--- a/YellowstonePathology/UI/Test/ChromosomeAnalysisResultPage.xaml
+++ b/YellowstonePathology/UI/Test/ChromosomeAnalysisResultPage.xaml
@@ -86,6 +86,7 @@
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 					</Grid.RowDefinitions>
@@ -111,9 +112,9 @@
 					<TextBox Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
 
 					<TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" FontWeight="Bold">Comment:</TextBlock>
-					<TextBox Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+                    <TextBox Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Comment}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
 
-					<TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,5" FontWeight="Bold">Metaphases Counted:</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,5" FontWeight="Bold">Metaphases Counted:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.MetaphasesCounted}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,5" FontWeight="Bold">Metaphases Analyzed:</TextBlock>
@@ -129,9 +130,12 @@
 					<TextBox Grid.Column="1" Grid.Row="11" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.BandingTechnique}" />
 
 					<TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,5" FontWeight="Bold">Banding Resolution:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="12" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.BandingResolution}" />					
+					<TextBox Grid.Column="1" Grid.Row="12" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.BandingResolution}" />
 
-					<local:ReferenceLabFinalControl x:Name="ReferenceLabFinalControl" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="13" Margin="2,2,2,2"/>
+                    <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" FontWeight="Bold">ASR:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="13" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ASR}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+
+                    <local:ReferenceLabFinalControl x:Name="ReferenceLabFinalControl" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="14" Margin="2,2,2,2"/>
 
 				</Grid>
 
