Add years to Flow search year combo

--- a/YellowstonePathology/UI/Flow/FlowWorkspace.xaml
+++ b/YellowstonePathology/UI/Flow/FlowWorkspace.xaml
@@ -838,7 +838,11 @@
 									<ComboBoxItem>2011</ComboBoxItem>
 									<ComboBoxItem>2012</ComboBoxItem>
 									<ComboBoxItem>2013</ComboBoxItem>
-								</ComboBox>
+                                    <ComboBoxItem>2014</ComboBoxItem>
+                                    <ComboBoxItem>2015</ComboBoxItem>
+                                    <ComboBoxItem>2016</ComboBoxItem>
+                                    <ComboBoxItem>2017</ComboBoxItem>
+                                </ComboBox>
 							</StackPanel>
 						</StackPanel>
 						<StackPanel Orientation="Horizontal">
