--- a/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
+++ b/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
@@ -40,7 +40,7 @@
                 <MenuItem Header="Remove MySql not in SqlServer" Click="MenuItemRemoveUnneededData_Click" Margin="5"></MenuItem>
             </MenuItem>
             <MenuItem Header="Compare/Update Selected Data" Click="MenuItemCompareData_Click" Margin="5" IsEnabled="{Binding Path=HaveDBSelection}"></MenuItem>
-            <MenuItem Header="Nonpersistent Tables ..." Click="MenuItemNonpersistentTables_Click" IsEnabled="{Binding Path=HaveDBSelection}"></MenuItem>
+            <MenuItem Header="Nonpersistent Tables ..." Click="MenuItemNonpersistentTables_Click"></MenuItem>
         </Menu>
 
         <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
