adding assignment scan

--- a/YellowstonePathology/UI/Billing/PanelSetOrderCPTCodeEntryPage.xaml
+++ b/YellowstonePathology/UI/Billing/PanelSetOrderCPTCodeEntryPage.xaml
@@ -55,6 +55,7 @@
 					<ComboBoxItem>26</ComboBoxItem>
 					<ComboBoxItem>TC</ComboBoxItem>
 					<ComboBoxItem>52</ComboBoxItem>
+                    <ComboBoxItem>59</ComboBoxItem>
 					<ComboBoxItem>1P</ComboBoxItem>
 				</ComboBox>
 
