--- a/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
+++ b/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
@@ -36,9 +36,10 @@
             </MenuItem>
             <MenuItem Header="Selected Data Action ..." Margin="5" IsEnabled="{Binding Path=HaveDBSelection}">
                 <MenuItem Header="Sync and Load new and altered" Click="MenuItemDailySync_Click" Margin="5"></MenuItem>
-                <MenuItem Header="Bulk Load Data" Click="MenuItemLoadData_Click" Margin="5"></MenuItem>
+                <MenuItem Header="Compare Sql Server Table to MySql" Click="MenuItemCompareTableData_Click" Margin="5"></MenuItem>
+                <!--<MenuItem Header="Bulk Load Data" Click="MenuItemLoadData_Click" Margin="5"></MenuItem>
                 <MenuItem Header="Synchronize Data" Click="MenuItemSynchronizeData_Click" Margin="5"></MenuItem>
-                <MenuItem Header="Add MySql Transferred in SqlServer" Click="MenuItemAddMissingTransferredData_Click" Margin="5"></MenuItem>
+                <MenuItem Header="Add MySql Transferred in SqlServer" Click="MenuItemAddMissingTransferredData_Click" Margin="5"></MenuItem>-->
                 <MenuItem Header="Remove MySql not in SqlServer" Click="MenuItemRemoveUnneededData_Click" Margin="5"></MenuItem>
             </MenuItem>
             <MenuItem Header="Compare/Update Selected Data" Click="MenuItemCompareData_Click" Margin="5" IsEnabled="{Binding Path=HaveDBSelection}"></MenuItem>
