--- a/YellowstonePathology/UI/Test/LynchSyndromeIHCPanelResultPage.xaml
+++ b/YellowstonePathology/UI/Test/LynchSyndromeIHCPanelResultPage.xaml
@@ -68,7 +68,7 @@
                     <Hyperlink Click="HyperLinkLossOfNuclearExpressionMSH2_Click">Loss of Nuclear Expression of MSH2 only</Hyperlink>
                 </TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
 
@@ -105,6 +105,7 @@
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="*"></RowDefinition>
 					</Grid.RowDefinitions>
@@ -127,13 +128,16 @@
 					<TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,5" FontWeight="Bold">PMS2 Result:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.PMS2Result}"></TextBox>
 
-					<TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Center">Distribute:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}" VerticalAlignment="Center" />
+                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,5" FontWeight="Bold">Comment:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.Comment}" TextWrapping="Wrap" AcceptsReturn="True" ></TextBox>
 
-					<TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Center">No Charge:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}" VerticalAlignment="Center" IsEnabled="False"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Center">Distribute:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}" VerticalAlignment="Center" />
 
-					<Grid Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2">
+					<TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Center">No Charge:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}" VerticalAlignment="Center" IsEnabled="False"></CheckBox>
+
+					<Grid Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="Auto"></ColumnDefinition>
 							<ColumnDefinition Width="*"></ColumnDefinition>
